data/collection/fixes/descriptions/java/JDK-8010315
$ build/linux-x86-normal-server-release/images/j2sdk-image/bin/javac -Xdoclint:all/protected,-missing -classpath build/linux-x86-normal-server-release/langtools/classes/ -d play/classes $(find langtools/src/share/classes/javax/lang/model/ langtools/src/share/classes/com/sun/source/ -name \*.java )
langtools/src/share/classes/javax/lang/model/util/Types.java:70: warning: empty <pre> tag
     * </pre>
       ^
langtools/src/share/classes/com/sun/source/util/DocTreeScanner.java:56: error: malformed HTML
 *   class CountErrors extends DocTreeScanner<Integer,Void> {
                                             ^
langtools/src/share/classes/com/sun/source/util/DocTreeScanner.java:56: error: bad use of '>'
 *   class CountErrors extends DocTreeScanner<Integer,Void> {
                                                          ^
langtools/src/share/classes/com/sun/source/util/JavacTask.java:59: warning: no description for @param
     * @param processingEnvironment
       ^
langtools/src/share/classes/com/sun/source/util/Plugin.java:41: error: reference not found
 * {@link StandardLocation#PROCESSOR_PATH PROCESSOR_PATH} or
          ^
langtools/src/share/classes/com/sun/source/tree/LambdaExpressionTree.java:38: warning: empty <pre> tag
 * }</pre>
    ^
3 errors
3 warnings
